--- a/src/index.html
+++ b/src/index.html
@@ -5,13 +5,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta
     name="description"
-    content="Example page for react-mirror-background"
+    content="Demo page for react-mirror-background"
   />
-  <title>react-mirror-background</title>
+  <title>Demo page of react-mirror-background</title>
 </head>
 <body>
 <noscript>You need to enable JavaScript to run this app.</noscript>
-<script type="module" src="index.tsx"></script>
+<script type="module" src="./index.tsx"></script>
 <div id="root"></div>
 </body>
 </html>
